--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ body {
     padding: 1em;
     border-bottom: 1px black solid;
     background-color: whitesmoke;
+    z-index: 1;
 }
 
 #nav-hamburger {
@@ -28,6 +29,7 @@ body {
     // justify-content: center;
     flex-direction: column;
     background-color: white;
+    z-index: 2;
 
     ul {
         list-style-type: none;
@@ -44,9 +46,10 @@ body {
 #menu-foreground {
     margin: 0;
     position: fixed;
-    width: 20%;
+    width: 100%;
     height: 100%;
     top: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.548);
+    background-color: rgba(0, 0, 0, 0.281);
+    z-index: -1;
 }
