--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@ body {
 
 #nav-list {
     margin: 0;
-    // padding: 5em;
+    // padding: 0 5em;
     position: fixed;
     width: 80%;
     height: 100%;
@@ -29,7 +29,11 @@ body {
     // justify-content: center;
     flex-direction: column;
     background-color: white;
-    z-index: 2;
+    z-index: 1000;
+
+    div {
+        padding: 1em;
+    }
 
     ul {
         list-style-type: none;
@@ -51,5 +55,5 @@ body {
     top: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.281);
-    z-index: -1;
+    z-index: 999;
 }
